# CppAD

./: .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS  BatchCommit.sh  Build  Build.sh  CMakeLists.txt  COPYING  ChangeLog  CheckIncludeDef  CheckIncludeDef.sh  CheckIncludeFile  CheckIncludeFile.sh  CheckIncludeOmh  CheckIncludeOmh.sh  CleanCppAD  CleanCppAD.sh  CppAD.tex  Dev.omh  Developer.omh  Doc.omh  DosFormat.sh  FixAclocal  FixAclocal.sh  FixMakefile  GplLicense.sh  INSTALL  LICENSE  Makefile.am  Makefile.in  NEWS  README  README.md  RunOMhelp  SetNoExecute  SvnCommit  SvnCommit.sed  SvnCommit.sh  SvnMerge  (+82 more)
Adolc/: AllocMat.cpp  AllocMat.h  AllocVec.cpp  AllocVec.h  DetLu.cpp  DetMinor.cpp  Example.cpp  Makefile.am  Makefile.in  Speed.cpp
Example/: Abs.cpp  Acos.cpp  Add.cpp  AddEq.cpp  Asin.cpp  Atan.cpp  Atan2.cpp  BenderQuad.cpp  BoolFun.cpp  Bool_vector.cpp  CheckNumericType.cpp  CheckSimpleVector.cpp  Compare.cpp  CompareChange.cpp  ComplexPoly.cpp  CondExp.cpp  Copy.cpp  CopyAD.cpp  CopyBase.cpp  Cos.cpp  Cosh.cpp  CppAD_vector.cpp  Default.cpp  DetByLu.cpp  DetByLu.h  DetByMinor.cpp  DetByMinor.h  DetOfMinor.cpp  DetOfMinor.h  Discrete.cpp  Div.cpp  DivEq.cpp  Eq.cpp  EqualOpSeq.cpp  Erf.cpp  ErrorHandler.cpp  Example.cpp  Example.sln  Example.vcproj  Exp.cpp  (+91 more)
Fadbad/: DetLu.cpp  DetMinor.cpp  Example.cpp  Makefile.am  Makefile.in  Speed.cpp
Introduction/: ExpApx.cpp  ExpApx.hpp  ExpApxAD.cpp  ExpApxFor.cpp  ExpApxMain.cpp  ExpApxRev.cpp  ExpApxSeq.cpp  ExpApxSeqMain.cpp  Introduction.cpp  Introduction.vcproj  Makefile.am
PrintFor/: Makefile.am  Makefile.in  PrintFor.cpp  PrintFor.sln  PrintFor.vcproj
Speed/: DetLu.cpp  DetMinor.cpp  LuSolve.cpp  Makefile.am  Makefile.in  Ode.cpp  Speed.cpp  Speed.sln  Speed.vcproj  gprof.sed
TestMore/: Abs.cpp  Acos.cpp  Add.cpp  AddEq.cpp  AddZero.cpp  Asin.cpp  Atan.cpp  Atan2.cpp  Compare.cpp  CompareChange.cpp  CondExp.cpp  CondExpAD.cpp  Copy.cpp  Cos.cpp  Cosh.cpp  Div.cpp  DivEq.cpp  DivZeroOne.cpp  Erf.cpp  Exp.cpp  ForHess.cpp  ForSparseJac.cpp  Forward.cpp  FromBase.cpp  Log.cpp  Log10.cpp  Makefile.am  Makefile.in  Mul.cpp  MulEq.cpp  MulZeroOne.cpp  NearEqualExt.cpp  Neg.cpp  OdeErrControl.cpp  OneTest  OneTest.sh  Poly.cpp  Pow.cpp  PowInt.cpp  RevSparseHes.cpp  (+20 more)
ad_op/: CMakeLists.txt  ad_op.cpp  add_op.hpp  binary_op.hpp  con_op.hpp  dead_code.hpp  fun_op.hpp  main.cpp  next_op.hpp  op.hpp  op_class.cpp  optimize.hpp  renumber.hpp  run.sh  sub_op.hpp  tape.hpp  type.hpp  unary_op.hpp
adolc/: AllocMat.cpp  AllocVec.cpp  DetLu.cpp  DetMinor.cpp  Example.cpp  Makefile.am  Speed.cpp  alloc_mat.cpp  alloc_mat.hpp  alloc_vec.cpp  alloc_vec.hpp  det_lu.cpp  det_minor.cpp  example.cpp  example_.cpp  speed.cpp  speed_.cpp
compare_c/: CMakeLists.txt  det_by_minor.c  makefile.am  makefile.in
cppad/: CMakeLists.txt  COPYING  CheckNumericType.h  CheckSimpleVector.h  CppAD.h  CppAD_vector.h  ErrorHandler.h  LuFactor.h  LuInvert.h  LuSolve.h  NearEqual.h  OdeErrControl.h  OdeGear.h  OdeGearControl.h  Poly.h  PowInt.h  RombergMul.h  RombergOne.h  Rosen34.h  Runge45.h  SpeedTest.h  TrackNewDel.h  base_require.hpp  check_numeric_type.hpp  check_simple_vector.hpp  config.h  config.h.in  configure.hpp  configure.hpp.in  cppad.hpp  declare.hpp  elapsed_seconds.hpp  error_handler.hpp  index_sort.hpp  lu_factor.hpp  lu_invert.hpp  lu_solve.hpp  memory_leak.hpp  nan.hpp  near_equal.hpp  (+18 more)
cppad_ipopt/: CMakeLists.txt
cppad_lib/: CMakeLists.txt  code_gen_fun.cpp  compiled_fun.cpp  cpp_graph_op.cpp  cppad_colpack.cpp  cppadcg_library.cpp  csrc_writer.cpp  graph_operator.cpp  json_lexer.cpp  json_operator.cpp  json_parser.cpp  json_writer.cpp  link_dll_lib.cpp  makefile.am  makefile.in  temp_file.cpp
example/: Abs.cpp  Acos.cpp  Add.cpp  AddEq.cpp  Asin.cpp  Atan.cpp  Atan2.cpp  BenderQuad.cpp  BoolFun.cpp  CMakeLists.txt  CheckNumericType.cpp  CheckSimpleVector.cpp  Compare.cpp  CompareChange.cpp  ComplexPoly.cpp  CondExp.cpp  CopyAD.cpp  CopyBase.cpp  Cos.cpp  Cosh.cpp  CppAD_vector.cpp  Default.cpp  DetByLu.cpp  DetByLu.h  DetByMinor.cpp  DetByMinor.h  DetOfMinor.cpp  DetOfMinor.h  Div.cpp  DivEq.cpp  Eq.cpp  EqualOpSeq.cpp  Erf.cpp  ErrorHandler.cpp  Example.cpp  Exp.cpp  ForOne.cpp  ForSparseJac.cpp  ForTwo.cpp  Forward.cpp  (+309 more)
introduction/: CMakeLists.txt  ExpApx.cpp  ExpApxAD.cpp  Introduction.cpp  Makefile.am  exp_2.cpp  exp_2.hpp  exp_2.omh  exp_2.xrst  exp_2_cppad.cpp  exp_2_for0.cpp  exp_2_for1.cpp  exp_2_for2.cpp  exp_2_rev1.cpp  exp_2_rev2.cpp  exp_apx.cpp  exp_apx_ad.cpp  exp_eps.cpp  exp_eps.hpp  exp_eps.omh  exp_eps.xrst  exp_eps_cppad.cpp  exp_eps_for0.cpp  exp_eps_for1.cpp  exp_eps_for2.cpp  exp_eps_rev1.cpp  exp_eps_rev2.cpp  introduction.cpp  introduction.sln  introduction.vcproj  introduction_.cpp  makefile.am  makefile.in
lib/: ErrFun.cpp  Makefile.am  Makefile.in  NearEqual.cpp  SpeedTest.cpp  SpeedTestExample.cpp
multi_thread/: CMakeLists.txt  arc_tan.cpp  arc_tan.hpp  harmonic.cpp  harmonic.hpp  harmonic_time.cpp  harmonic_time.hpp  harmonic_work.cpp  harmonic_work.hpp  makefile.am  makefile.in  multi_newton.cpp  multi_newton.hpp  multi_newton_time.cpp  multi_newton_time.hpp  multi_newton_work.cpp  multi_newton_work.hpp  multi_thread.cpp  simple_ad.cpp  simple_ad.hpp  sum_i_inv.cpp  sum_i_inv.hpp  sum_i_inv_time.cpp  sum_i_inv_time.hpp  sum_i_inv_work.cpp  sum_i_inv_work.hpp  team_example.cpp  team_example.hpp  team_thread.hpp  test.sh  thread_team.hpp  thread_test.cpp
pkgconfig/: CMakeLists.txt  cmake.cppad-uninstalled.pc  cmake.cppad.pc  cppad-uninstalled.pc.in  cppad.pc.in
print_for/: CMakeLists.txt  Makefile.am  makefile.am  makefile.in  print_for.cpp  print_for.sln  print_for.vcproj  test.sh
speed/: CMakeLists.txt  DetLu.cpp  DetMinor.cpp  LuSolve.cpp  Makefile.am  Ode.cpp  Speed.cpp  Speed.sln  add_test.sh  det_by_lu.hpp  det_by_minor.hpp  det_grad_33.hpp  det_lu.cpp  det_minor.cpp  det_of_minor.hpp  dev_speed.omh  dev_speed.xrst  devel_speed.omh  link_det_lu.cpp  link_det_minor.cpp  link_ode.cpp  link_poly.cpp  link_quadratic.cpp  link_sparse_hessian.cpp  link_sparse_jacobian.cpp  (+15 more)
(+10015 files in other folders)
